Add Generate Quetion By AI, Add Import Question By Excel
Add Generate Quetion By AI, Add Import Question By Excel

--- a/final-project-fe/Pages/Shared/_Layout.cshtml
+++ b/final-project-fe/Pages/Shared/_Layout.cshtml
@@ -95,6 +95,9 @@
 							<li>
 								<a class="nav-link text-dark" asp-area="" asp-page="/PointTransaction">Buy Point</a>
 							</li>
+							@* <li>
+								<a class="nav-link text-dark" asp-area="" asp-page="/ErrorPage">404</a>
+							</li> *@
 							<li>
 								<a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
 							</li>
