--- a/final-project-fe/Pages/Index.cshtml
+++ b/final-project-fe/Pages/Index.cshtml
@@ -39,6 +39,10 @@
 													<i class="ti-files"></i>
 													<a asp-page="/UserPage" title="">My pages</a>
 												</li>
+												<li>
+													<i class="ti-comments-smiley"></i>
+													<a asp-page="/CourseRecommend" title="">Recommend Course</a>
+												</li>
 											}
 											@* <li>
 													<i class="ti-comments-smiley"></i>
