--- a/final-project-fe/Pages/Shared/_Layout.cshtml
+++ b/final-project-fe/Pages/Shared/_Layout.cshtml
@@ -17,14 +17,6 @@
 	bool isMentor = roles.Contains("Mentor");
 	bool isAdmin = roles.Contains("Admin");
 }
-@section Scripts {
-	<script>
-		if (document.cookie.includes("AccessToken") && !sessionStorage.getItem("reloaded")) {
-			sessionStorage.setItem("reloaded", "true");
-			location.reload();
-		}
-	</script>
-}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -409,7 +401,15 @@
 	<script src="~/js/script.js"></script>
 	<script src="~/js/map-init.js"></script>
 	@* <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8c55_YHLvDHGACkQscgbGLtLRdxBDCfI"></script> *@
+	<script>
+		document.addEventListener('DOMContentLoaded', function () {
+			const hasToken = document.cookie.includes('AccessToken=');
 
+			if (!hasToken) {
+				sessionStorage.removeItem('courseRecommendLoadingShown');
+			}
+		});
+	</script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
