--- a/final-project-fe/Pages/Mentor/MentorPage/Index.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/Index.cshtml
@@ -540,8 +540,8 @@
 <div class="theme-layout">
     <!-- Top Banner -->
      <section>
-        <div class="ext-gap bluesh high-opacity">
-            <div class="content-bg-wrap" style="background: url('@Url.Content("~/images/resources/animated-bg2.png")')"></div>
+            <div style="background-color: #111827" class="ext-gap high-opacity">
+            <div class="content-bg-wrap"></div>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
@@ -551,7 +551,7 @@
                             <nav class="breadcrumb">
                                <ol class="breadcrumb justify-content-center">
                                     <li class="breadcrumb-item"><a href="#" class="text-white-50">Home</a></li>
-                                    <li class="breadcrumb-item active text-white" aria-current="page">Courses</li>
+                                    <li class="active text-white" aria-current="page">/Courses</li>
                                 </ol>
                             </nav>
                         </div>
@@ -581,7 +581,7 @@
                         <option value="desc_rating">Highest Rated</option>
                     </select>
                 </div>
-                <button class="btn search-btn" onclick="searchCourses()">
+                <button style="background-color: #111827;" class="btn search-btn" onclick="searchCourses()">
                     <i class="bi bi-search me-2"></i>Search
                 </button>
             </div>
