--- a/final-project-fe/Pages/Login.cshtml
+++ b/final-project-fe/Pages/Login.cshtml
@@ -120,7 +120,7 @@
         }
     </style>
 
-@*     <script>
+     <script>
         document.getElementById("googleLoginBtn").addEventListener("click", async () => {
             // Gọi API backend để lấy URL login Google
             const response = await fetch("@($"{Model.BaseUrl}/Auth/google-login")");
@@ -159,7 +159,7 @@
         }
 
         handleGoogleCallback();
-    </script> *@
+    </script> 
 
 </body>
 </html>
