New Page Post Detail

--- a/final-project-fe/Pages/Admin/PostManager/ListDeleted.cshtml
+++ b/final-project-fe/Pages/Admin/PostManager/ListDeleted.cshtml
@@ -167,7 +167,7 @@
             row.addEventListener("click", () => {
                 const postId = row.getAttribute("data-id");
                 if (postId) {
-                    window.location.href = `/Admin/PostManager/Detail?id=${postId}`;
+                    window.location.href = `/DetailPost?id=${postId}`;
                 }
             });
         });
