--- a/final-project-fe/Pages/Admin/ReportManager/PostsReport/Index.cshtml
+++ b/final-project-fe/Pages/Admin/ReportManager/PostsReport/Index.cshtml
@@ -52,7 +52,7 @@
                     <div>
                         <span class="badge bg-danger me-3">@reportCount Report(s)</span>
                         <a class="btn btn-sm btn-outline-primary"
-                           asp-page="/Admin/PostManager/Detail" asp-route-id="@group.Id" >
+                           asp-page="/DetailPost" asp-route-id="@group.Id">
                             <i class="fas fa-external-link-alt"></i> Detail Post
                         </a>
                     </div>
